--- a/.env
+++ b/.env
@@ -14,7 +14,7 @@ SQLITE_DATABASE=renthub.db
 SECRET_KEY='django-insecure--%rxfzo+_fa+9@g+*zl!k&bk051r&+3#u4l^r1n$beoeby30t('
 ALLOWED_HOSTS=*
 DEBUG=True
-MYSQL=False
+MYSQL=True
 
 # ---------------------------------------------------------------------
 
